<resources>
    <string name="app_name">Pokedex</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello home fragment</string>
    <string name="text_home">Home</string>
    <string name="text_pokemon">Pokemon</string>
    <string name="text_settings">Settings</string>
    <string name="element_text">nombre de pokemon</string>
    <string name="titlePokemonSearchLayout">Search pokemon</string>
    <string name="pokemon">Pokemon</string>
    <string name="ability_pokemon">"Ability : "</string>
    <string name="height_of_pokemon">"Height : "</string>
    <string name="base_experience">"Base experience : "</string>
    <string name="weight_of_pokemon">"Weight : "</string>
</resources>