<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".presentation.fragments.DetailPokemonFragment">

    <TextView
        android:id="@+id/nameOfPokemon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pokemon"
        android:textSize="24sp"
         android:layout_marginVertical="8dp"
        android:layout_marginHorizontal="10dp"/>

    <ImageView

        android:id="@+id/frontImageOfPokemon"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginHorizontal="12dp"
        android:src="@drawable/ic_baseline_pokeball_24"/>

    <TextView
        android:id="@+id/abilityOfPokemon"
        android:text="@string/ability_pokemon"
        android:textSize="12sp"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp" />

    <TextView
        android:id="@+id/heightOfPokemon"
        android:text="@string/height_of_pokemon"
        android:textSize="12sp"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        />
    <TextView
        android:id="@+id/baseExperience"
        android:text="@string/base_experience"
        android:textSize="12sp"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        />
    <TextView
        android:id="@+id/weightOfPokemon"
        android:text="@string/weight_of_pokemon"
        android:textSize="12sp"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        />



</LinearLayout>